Overhaul the configuration, API, and violations (#71)
* Begin overhauling configuration

* Overhaul violations - replace ViolationAction with ViolationTrigger

* Fix formatting in API classes and ViolationManager

* Code cleanup in Utility and NESSAnticheat

* Optimizing the code

* Removing useless imports

* Making BlockBreak Checks

* Work on commands and messages

* Cleanup NESSCommands and migrate it to new config

* Migrate antibot configuration to new config

* Remove the generic parameter on CheckInfo

* Refactor violations; deprecate Violation and introduce Infraction

* Refactor Infraction.getCheck() to return AnticheatCheck

* Fix a longstanding problem with NESSExample

* Introduce AnticheatPlayer and PlayerFlagEvent

* Migrate AutoClick to new configuration setup

* Fixing a false flag

* Minor change to AutoClick.CheckConf

* Trying to use DazzlConfig library in one check

* Trying to use DazzlConfig for other checks

* Using DazzlConfig for every Check

* Add testing for config initialisation

* Update .classpath - this file will be removed from the source repo soon

* Deprecate poor API methods and add replacements for them

* WIP: Update NESSExample based on API updates

* Finish updating NESSExample

* Change how ColorSerialiser parses and outputs RGB

* Remove unused resource files

config.yml also slated for removal but kept for present reference

* Reorganise API implementation

* Retain support for deprecated events until next major release
* Avoid NPE before CheckManager finishes loading checks

* Refactor CheckManager, split into PlayerManager

* Change NESSCommands to leave NessPlayer.violationsMap

* Fix ordering in NESSCommands's iteration over checks

* Use runTaskLater shortcut where applicable

* Begin steps to decouple JavaPlugin from NESSAnticheat (#73)

* Organise NESSAnticheat slightly better

* Minor code cleanup in InventoryHack and Killaura

* Write comm